--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "php": "^7.2"
     },
     "autoload": {
-        "psr-4": {}
+        "psr-4": {
+            "TinyDB\\": "src/"
+        }
     }
 }
