--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,7 @@
     "type": "library",
     "description": "TinyDB is a json database for tiny php projects",
     "license": "MIT",
-    "keywords": [
-        "database",
-        "json",
-        "composer",
-        "php",
-        "psr-4"
-    ],
+    "keywords": ["database", "json", "composer", "php", "psr-4"],
     "homepage": "https://github.com/MrAnyx/TinyDB",
     "minimum-stability": "dev",
     "authors": [
@@ -19,11 +13,15 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.4",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
-            "MrAnyx\\TinyDB\\": "src/"
+            "MrAnyx\\": "src/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "5.x-dev"
     }
 }
